--- a/index.html
+++ b/index.html
@@ -2,15 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="icon" href="./uto.png" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Spinner</title>
   <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
   <div class="root">
-    <div class="container">
-      <textarea rows="10"></textarea>
+    <div class="input">
+      <div class="container">
+        <div class="backdrop">
+        </div>
+        <textarea></textarea>
+      </div>
       <button>Spin</button>
     </div>
     <div class="result"></div>
@@ -18,3 +23,4 @@
 </body>
 <script type="module" src="./script.js"></script>
 </html>
+<!-- This demo shows how to highlight bits of text within a textarea. Alright, that's a lie. You can't actually render markup inside a textarea. However, you can fake it by carefully positioning a div behind the textarea and adding your highlight markup there. JavaScript takes care of syncing the content and scroll position from the textarea to the div, so everything lines up nicely. Hit the toggle button to peek behind the curtain. And feel free to edit this text. All capitalized words will be highlighted. -->
