--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
       <button>Spin</button>
     </div>
     <div class="result"></div>
+    <div class="logo">
+      <img src="./uto.png" alt="error png" />
+    </div>
   </div>
 </body>
 <script type="module" src="./script.js"></script>
 </html>
-<!-- This demo shows how to highlight bits of text within a textarea. Alright, that's a lie. You can't actually render markup inside a textarea. However, you can fake it by carefully positioning a div behind the textarea and adding your highlight markup there. JavaScript takes care of syncing the content and scroll position from the textarea to the div, so everything lines up nicely. Hit the toggle button to peek behind the curtain. And feel free to edit this text. All capitalized words will be highlighted. -->
