--- a/index.html
+++ b/index.html
@@ -9,15 +9,18 @@
   <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
-  <div class="root">
+  <div id="root">
     <div class="input">
       <div class="container">
         <div class="backdrop">
         </div>
-        <textarea></textarea>
+        <textarea placeholder="Nhập nội dung ..."></textarea>
       </div>
-      <button>Spin</button>
+      <div class="btn">
+        <button>Spin</button>
+      </div>
     </div>
+    <div class="space"></div>
     <div class="result"></div>
     <div class="logo">
       <img src="./uto.png" alt="error png" />
