--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <textarea placeholder="Nhập nội dung ..."></textarea>
       </div>
       <div class="btn">
-        <button>Spin</button>
+        <button class="spin">Spin</button>
+        <button class="reset">Reset</button>
       </div>
     </div>
     <div class="space"></div>
