fix reset button feature

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
   <div id="root">
     <div class="input">
       <div class="container">
-        <div class="backdrop">
-        </div>
+        <div class="backdrop"></div>
         <textarea placeholder="Nhập nội dung ..."></textarea>
       </div>
       <div class="btn">
