finish drag items custom

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <textarea placeholder="Nhập nội dung ..."></textarea>
       </div>
       <div class="btn">
-        <button class="spin">Spin</button>
-        <button class="reset">Reset</button>
+        <button class="spin bd93f9">Spin</button>
+        <button class="reset bd93f9">Reset</button>
       </div>
     </div>
     <div class="space"></div>
