finish response api

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <textarea placeholder="Nhập nội dung ..."></textarea>
       </div>
       <div class="btn">
-        <button class="spin bd93f9">Spin</button>
-        <button class="reset bd93f9">Reset</button>
+        <button class="spin bd93f9" title="Mỗi lần click sẽ tạo ra một nội dung mới">Chuyển đổi</button>
+        <button class="reset bd93f9">Tạo mới</button>
       </div>
     </div>
     <div class="space"></div>
@@ -26,6 +26,6 @@
       <img src="./uto.png" alt="error png" />
     </div>
   </div>
+  <script type="module" src="./script.js"></script>
 </body>
-<script type="module" src="./script.js"></script>
 </html>
