--- a/index.html
+++ b/index.html
@@ -10,11 +10,8 @@
 </head>
 <body>
   <div id="root">
-    <div class="input">
-      <div class="container">
-        <div class="backdrop"></div>
-        <textarea placeholder="Nhập nội dung ..."></textarea>
-      </div>
+    <div class="top">
+      <div class="input" contentEditable="true"></div>
       <div class="btn">
         <button class="spin bd93f9" title="Mỗi lần click sẽ tạo ra một nội dung mới">Chuyển đổi</button>
         <button class="reset bd93f9">Tạo mới</button>
