--- a/index.html
+++ b/index.html
@@ -13,14 +13,17 @@
     <div class="top">
       <div class="input" contentEditable="true"></div>
       <div class="btn">
-        <button class="spin bd93f9" title="Mỗi lần click sẽ tạo ra một nội dung mới">Chuyển đổi</button>
-        <button class="reset bd93f9">Tạo mới</button>
+        <button class="spin bd93f9-button" title="Mỗi lần click sẽ tạo ra một nội dung mới">Chuyển đổi</button>
+        <button class="reset bd93f9-button">Tạo mới</button>
       </div>
     </div>
     <div class="space"></div>
-    <div class="result"></div>
     <div class="logo">
       <img src="./uto.png" alt="error png" />
+    </div>
+    <div class="right">
+      <div class="result" contentEditable="false"></div>
+      <div class="pagination"></div>
     </div>
   </div>
   <script type="module" src="./script.js"></script>
