--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Spinner</title>
+  <link rel="stylesheet" href="./base.css" />
   <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
   <div id="root">
-    <div class="top">
-      <div class="input" contentEditable="true"></div>
+    <div class="left">
+      <div class="input scrollbar-style" contentEditable="true"></div>
       <div class="btn">
         <button class="spin bd93f9-button" title="Mỗi lần click sẽ tạo ra một nội dung mới">Chuyển đổi</button>
         <button class="reset bd93f9-button">Tạo mới</button>
@@ -22,7 +23,7 @@
       <img src="./uto.png" alt="error png" />
     </div>
     <div class="right">
-      <div class="result" contentEditable="false"></div>
+      <div class="result scrollbar-style" contentEditable="false"></div>
       <div class="pagination"></div>
     </div>
   </div>
