--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <div class="btn">
         <button class="spin bd93f9-button" title="Mỗi lần click sẽ tạo ra một nội dung mới">Chuyển đổi</button>
         <button class="reset bd93f9-button">Tạo mới</button>
+        <div class="word-counter"></div>
       </div>
     </div>
     <div class="space"></div>
