finish to pick wrong word feature

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
     </div>
     <div class="right">
       <div class="result scrollbar-style" contentEditable="false"></div>
-      <div class="pagination"></div>
+      <div class="btn">
+        <button class="spellcheck bd93f9-button">Spell Checker</button>
+      </div>
     </div>
   </div>
   <script type="module" src="./script.js"></script>
