finish spell check feature

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div id="root">
     <div class="left">
-      <div class="input scrollbar-style" contentEditable="true"></div>
+      <div class="input scrollbar-style" contentEditable="true" placeholder="Nhập nội dung ..."></div>
       <div class="btn">
         <button class="spin bd93f9-button" title="Mỗi lần click sẽ tạo ra một nội dung mới">Chuyển đổi</button>
         <button class="reset bd93f9-button">Tạo mới</button>
